<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:id="@+id/rl_container_categories"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="?attr/mainBackground"
  >
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_above="@+id/button_divider"
    android:padding="@dimen/medium_padding"
    android:orientation="vertical">
    <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="@dimen/half_standard_height"
      android:layout_marginEnd="@dimen/standard_gap"
      android:orientation="horizontal">

      <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/half_standard_height"
        android:layout_marginEnd="@dimen/standard_gap"
        android:gravity="center_vertical"
        android:textSize="@dimen/normal_text"
        android:textStyle="bold"
        tools:text="Step 1 of 15" />

      <ImageView
        android:id="@+id/tooltip"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:src="@drawable/maplibre_info_icon_default" />
    </LinearLayout>

    <TextView
      android:id="@+id/tv_subtitle"
      android:layout_width="wrap_content"
      android:layout_height="@dimen/half_standard_height"
      android:layout_marginTop="@dimen/tiny_gap"
      android:gravity="center_vertical"
      android:text="@string/upload_flow_all_images_in_set"
      android:textSize="@dimen/subtitle_text"
      android:visibility="visible"
      tools:visibility="visible"/>

    <FrameLayout
      android:id="@+id/category_search_layout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/standard_gap"
      >
      <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_container_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <fr.free.nrw.commons.ui.PasteSensitiveTextInputEditText
          android:id="@+id/et_search"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/categories_search_text_hint"
          android:imeOptions="actionSearch"
          android:inputType="text"
          android:maxLines="1"
          app:allowFormatting="false" />
      </com.google.android.material.textfield.TextInputLayout>

      <ProgressBar
        android:id="@+id/pb_categories"
        style="?android:progressBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/tiny_gap"
        android:layout_gravity="center_vertical|end"
        android:indeterminate="true"
        android:indeterminateOnly="true"
        android:visibility="gone"
        tools:visibility="visible"/>
    </FrameLayout>

    <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/rv_categories"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:scrollbars="vertical"
      android:fadeScrollbars="false"
      android:scrollbarThumbVertical="@color/primaryColor"
      android:scrollbarSize="@dimen/dimen_6"
      android:layout_above="@+id/button_divider"
      android:layout_below="@id/category_search_layout"/>

  </LinearLayout>

  <View
    android:id="@+id/button_divider"
    android:layout_width="match_parent"
    android:layout_height="@dimen/tiny_height"
    android:layout_above="@+id/ll_container_buttons"
    android:background="@color/divider_grey"/>

  <LinearLayout
    android:id="@+id/ll_container_buttons"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:paddingVertical="@dimen/small_padding"
    android:paddingHorizontal="@dimen/large_padding"
    android:orientation="horizontal"
    >

    <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/btn_previous"
      style="@style/Widget.AppCompat.Button.Borderless"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:contentDescription="@string/previous"
      android:text="@string/previous" />

    <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/btn_next"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:contentDescription="@string/next"
      android:text="@string/next"
      android:textColor="@android:color/white" />

  </LinearLayout>

</RelativeLayout>

