...
      android:visibility="visible"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@drawable/ic_remove" />

    <ImageView
      android:id="@+id/btn_add"
      android:layout_width="24dp"
      android:layout_height="wrap_content"
      android:layout_marginEnd="10dp"
      android:contentDescription="@string/remove"
      android:visibility="visible"
      app:layout_constraintEnd_toStartOf="@+id/btn_remove"
...
      android:layout_marginTop="4dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/ll_write_better_caption">

      <fr.free.nrw.commons.ui.PasteSensitiveTextInputEditText
        android:id="@+id/description_item_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minLines="1"
        android:maxLines="10"
        android:hint="@string/share_description_hint"
        android:imeOptions="actionNext|flagNoExtractUi"
...
