...
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/postive_button"
            android:layout_gravity="right"
            android:layout_marginLeft="@dimen/progressbar_stroke"
            android:text="Yes" />
    </LinearLayout>
</LinearLayout>

