...
  <string name="menu_settings">Settings</string>
  <string name="intent_share_upload_label">Upload to Commons</string>
  <string name="upload_in_progress">Upload in progress</string>
  <string name="username">Username</string>
  <string name="password">Password</string>
  <string name="login_credential">Log in to your Commons Beta account</string>
  <string name="login">Log in</string>
  <string name="forgot_password">Forgot Password?</string>
  <string name="signup">Sign up</string>
  <string name="logging_in_title">Logging in</string>
  <string name="logging_in_message">Please wait…</string>
  <string name="updating_caption_title">Updating captions and descriptions</string>
  <string name="updating_caption_message">Please wait…</string>
...
  <string name="nearby_wikidata">Wikidata</string>
  <string name="nearby_wikipedia">Wikipedia</string>
  <string name="nearby_commons">Commons</string>
  <string name="about_rate_us">Rate us</string>
  <string name="about_faq">FAQ</string>
  <string name="user_guide">User Guide</string>
  <string name="welcome_skip_button">Skip Tutorial</string>
  <string name="no_internet">Internet unavailable</string>
  <string name="error_notifications">Error fetching notifications</string>
  <string name="error_review">Error fetching image for review. Press refresh to try again.</string>
  <string name="no_notifications">No notifications found</string>
  <string name="about_translate">Translate</string>
  <string name="about_translate_title">Languages</string>
...
  <string name="wikipedia_instructions_step_6">6. Edit the wikitext for appropriate positioning, if necessary. For more information, see &lt;a href="https://en.wikipedia.org/wiki/Wikipedia:Manual_of_Style/Images#How_to_place_an_image"&gt;here&lt;/a&gt;.</string>
  <string name="wikipedia_instructions_step_7">7. Publish the article</string>
  <string name="copy_wikicode_to_clipboard">Copy wikitext to clipboard</string>
  <string name="pause">pause</string>
  <string name="resume">resume</string>
  <string name="paused">Paused</string>
  <string name="more">More</string>
  <string name="bookmarks">Bookmarks</string>
  <string name="achievements_tab_title">Achievements</string>
  <string name="leaderboard_tab_title">Leaderboard</string>
  <string name="rank_prefix">Rank:</string>
  <string name="count_prefix">Count:</string>
  <string name="leaderboard_column_rank">Rank</string>
...
