...
              android:visibility="gone"
              tools:visibility="visible" />

          </com.google.android.material.textfield.TextInputLayout>

          <LinearLayout
            android:id="@+id/buttonFrame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/two_factor_container"
            android:layout_marginStart="@dimen/standard_gap"
            android:layout_marginLeft="@dimen/standard_gap"
            android:layout_marginEnd="@dimen/standard_gap"
...
              android:layout_marginEnd="@dimen/small_gap"
              android:layout_marginRight="@dimen/small_gap"
              android:layout_weight="1"
              android:text="@string/signup" />

            <Button
              android:id="@+id/login_button"
              style="@style/Widget.AppCompat.Button.Colored"
              android:layout_width="@dimen/dimen_0"
              android:layout_height="wrap_content"
              android:layout_marginStart="@dimen/small_gap"
              android:layout_marginLeft="@dimen/small_gap"
              android:layout_weight="1"
...
