...
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/fragmentContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/fragment_main_nav_tab_layout"
            android:orientation="horizontal">

            <fr.free.nrw.commons.contributions.UnswipableViewPager
                android:id="@+id/pager"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
...
